--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,113 @@
-html {
-  box-sizing: border-box;
+@import 'vars';
+@import 'global';
+
+// start header
+
+.header__top {
+  background-color: #eef1f3;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+.header__top-inner {
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 500;
 }
+
+.header__logo {
+  margin-left: 7px;
+  margin-right: 10px;
+}
+
+.header__seller {
+  margin-left: auto;
+  margin-right: 150px;
+  padding: 15px 18px;
+  background-color: $blue;
+  border-radius: 18px;
+  max-height: 36px;
+  display: flex;
+  align-items: center;
+  a {
+    color: #fff;
+  }
+}
+
+.header__btn {
+  padding: 4px;
+  width: 72px;
+  border-radius: 18px;
+  text-align: center;
+  color: #fff;
+  &-login {
+    background-color: #fff;
+    color: $blue;
+  }
+
+  &-register {
+    background-color: $blue;
+    margin-left: 7px;
+  }
+}
+
+.header__menu {
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+.menu__list {
+  li {
+    display: inline-block;
+    & + li {
+      margin-left: 32px;
+    }
+  }
+
+  a {
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $header;
+  }
+}
+
+.header__search {
+  max-width: 360px;
+  position: relative;
+  margin-top: 17px;
+  input {
+    display: block;
+    width: 100%;
+    border: 1px solid $border;
+    border-radius: 23px;
+    height: 46px;
+    font-size: 15px;
+    padding-left: 24px;
+    padding-right: 90px;
+    margin-right: 70px;
+    &::placeholder {
+      color: #898f96;
+    }
+  }
+
+  button {
+    position: absolute;
+    border: none;
+    border-radius: 23px;
+    width: 70px;
+    height: 46px;
+    right: 0;
+    top: 0;
+    background-color: $blue;
+    cursor: pointer;
+  }
+}
+// end header
