--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'vars';
 @import 'global';
+@import 'fonts';
 
 // start header
 
@@ -295,3 +296,211 @@
 }
 
 // end advantages
+
+// start slider-weekly
+
+.slider__weekly {
+  background-color: $bg;
+  margin-bottom: 120px;
+}
+
+.slider__inner {
+  padding: 120px 0;
+  &-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 110px;
+    background-color: #fff;
+    padding: 0 30px;
+    margin-bottom: 50px;
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  }
+}
+
+.slider__top-btn {
+  width: 110px;
+  height: 45px;
+  background-color: #7347c1;
+  border-radius: 23px;
+  position: relative;
+}
+
+.slider__item {
+  position: relative;
+  &-title {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    color: #000;
+  }
+
+  &-seller {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    min-height: 34px;
+  }
+
+  &-text {
+    margin-top: 25px;
+  }
+
+  &-tag {
+    margin-top: 30px;
+    font-size: 15px;
+    line-height: 18px;
+    ul {
+      display: flex;
+      justify-content: left;
+
+      li {
+        padding: 4px 16px;
+        border-radius: 12px;
+        background-color: #f1f3f6;
+        display: flex;
+        align-items: center;
+        a {
+          color: #868c96;
+        }
+      }
+
+      li + li {
+        margin-left: 7px;
+      }
+    }
+  }
+
+  &-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    margin-top: 44px;
+    border-top: 1px solid #ececec;
+  }
+}
+
+.slider__item-left {
+  max-width: 555px;
+  height: 450px;
+}
+
+.slider__item-right {
+  position: absolute;
+  max-width: 585px;
+  display: inline-block;
+  background-color: #fff;
+  right: 0;
+  top: 0;
+  height: 450px;
+  padding: 50px 50px 0 50px;
+}
+
+.item__seller-author {
+  display: flex;
+  align-items: center;
+  max-width: 115px;
+  font-size: 15px;
+  color: #000;
+  font-weight: 500;
+  .avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-position: center;
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-right: 8px;
+  }
+}
+
+.item__seller-platform {
+  font-size: 15px;
+  color: #7347c1;
+  margin-left: 21px;
+  padding-left: 25px;
+  position: relative;
+  &::before {
+    content: '\f19a';
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+  }
+}
+
+.slider__box-price {
+  display: flex;
+  justify-content: left;
+  .box__item {
+    margin-left: 19px;
+    padding-left: 26px;
+    font-size: 15px;
+  }
+}
+
+.item__box-price {
+  padding: 0 18px;
+  background-color: $blue;
+  border-radius: 16px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.item__box-purch {
+  color: $blue;
+  position: relative;
+  &::before {
+    content: '\f07a';
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+  }
+}
+
+.item__box-hearts {
+  position: relative;
+  &::before {
+    content: '\f08a';
+    font-family: 'icomoon';
+    position: absolute;
+    color: #7347c1;
+    margin-right: 10px;
+    left: 0;
+  }
+}
+
+.slick-arrow {
+  position: absolute;
+  width: 55px;
+  height: 45px;
+  background-color: transparent;
+  border-radius: 23px;
+  border: none;
+  cursor: pointer;
+}
+
+.slick-prev {
+  right: 86px;
+  top: -127px;
+}
+
+.slick-next {
+  right: 30px;
+  top: -127px;
+}
+
+button.slick-arrow.slick-next {
+  outline: none;
+}
+
+button.slick-arrow.slick-prev {
+  outline: none;
+}
+
+// end slider-weekly
