--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -40,3 +40,14 @@ body {
   color: #000;
   font-weight: 500;
 }
+
+.inner__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 110px;
+  background-color: #fff;
+  padding: 0 30px;
+  margin-bottom: 50px;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+}
