--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -301,21 +301,10 @@
 
 .slider__weekly {
   background-color: $bg;
-  margin-bottom: 120px;
 }
 
 .slider__inner {
   padding: 120px 0;
-  &-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 110px;
-    background-color: #fff;
-    padding: 0 30px;
-    margin-bottom: 50px;
-    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
-  }
 }
 
 .slider__top-btn {
@@ -504,3 +493,215 @@ button.slick-arrow.slick-prev {
 }
 
 // end slider-weekly
+
+// start products
+
+.products {
+  background-color: #f6f7fb;
+  padding: 120px 0;
+}
+
+.products__inner-top {
+  margin-bottom: 30px;
+}
+
+.products__top-items {
+  display: flex;
+  justify-content: space-between;
+}
+
+.top__items-text {
+  color: #747b86;
+  margin-right: 25px;
+}
+
+.top__items-dots {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.top__items-dot {
+  width: 4px;
+  height: 4px;
+  background-color: #a3b1c4;
+  border-radius: 50%;
+  margin: 2px 0;
+}
+
+.products__inner-btn {
+  margin-bottom: 50px;
+  height: 92px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  padding: 0 30px;
+  button {
+    padding: 4px 20px;
+    border: none;
+    background-color: #f1f3f6;
+    border-radius: 16px;
+    font-size: 15px;
+    color: #747b86;
+    cursor: pointer;
+    & + button {
+      margin-left: 10px;
+    }
+    &.mixitup-control-active {
+      background-color: $blue;
+      color: #fff;
+    }
+  }
+}
+
+.products__inner-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.products__item {
+  max-width: 360px;
+  width: 100%;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  margin-bottom: 30px;
+  &-img {
+    min-height: 230px;
+    background-repeat: no-repeat;
+    display: block;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+  }
+
+  &-content {
+    padding: 25px 38px 0 30px;
+  }
+
+  &-title {
+    font-size: 20px;
+    font-weight: 500;
+    color: #000;
+  }
+
+  &-seller {
+    display: flex;
+    justify-content: left;
+    margin-top: 10px;
+    .item__seller-author {
+      max-width: 140px;
+    }
+  }
+
+  &-text {
+    margin-top: 20px;
+  }
+
+  &-box {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 62px;
+    margin-top: 30px;
+    border-top: 1px solid #ececec;
+    padding: 0 30px;
+    .item__box-price {
+      background-color: #e6f1fd;
+      font-size: 500;
+      color: $blue;
+      // padding: 2px 16px;
+      margin-right: 13px;
+      max-width: 85px;
+      height: 30px;
+    }
+
+    .item__box-hearts {
+      padding-left: 22px;
+      margin-right: 15px;
+    }
+
+    .item__box-rating {
+      margin-right: 40px;
+    }
+
+    .item__box-purch {
+      padding-left: 22px;
+      font-size: 15px;
+    }
+  }
+}
+
+.products__item-img:hover .products__img {
+  height: 100%;
+}
+
+.products__img {
+  background-image: url(../images/products/products-hover.jpg);
+  height: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  transition: all 0.5s;
+  &-info {
+    max-height: 45px;
+    padding: 4px 25px;
+    border: 1px solid #f4f4f4;
+    border-radius: 22px;
+    font-weight: 500;
+    font-size: 15px;
+    color: #fff;
+  }
+
+  &-demo {
+    max-height: 45px;
+    padding: 4px 25px;
+    margin-left: 10px;
+    border: 1px solid #f4f4f4;
+    border-radius: 22px;
+    font-weight: 500;
+    font-size: 15px;
+    color: $blue;
+    background-color: #fff;
+  }
+}
+
+.item__psd {
+  &::before {
+    content: '\f1c4';
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+  }
+}
+
+.item__html {
+  &::before {
+    content: '\f13b';
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+  }
+}
+
+.products__btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 28px;
+}
+.products__inner-link {
+  max-height: 55px;
+  background-color: $blue;
+  display: inline-block;
+  border-radius: 26px;
+  padding: 10px 30px;
+
+  a {
+    color: #fff;
+  }
+}
+// end products
