--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -29,8 +29,14 @@
 .icon-clock-o:before {
   content: '\f017';
 }
+.icon-lock:before {
+  content: '\f023';
+}
 .icon-map-marker:before {
   content: '\f041';
+}
+.icon-leaf:before {
+  content: '\f06c';
 }
 .icon-eye:before {
   content: '\f06e';
@@ -38,11 +44,32 @@
 .icon-shopping-cart:before {
   content: '\f07a';
 }
+.icon-bar-chart:before {
+  content: '\f080';
+}
+.icon-bar-chart-o:before {
+  content: '\f080';
+}
 .icon-heart-o:before {
   content: '\f08a';
 }
 .icon-phone:before {
   content: '\f095';
+}
+.icon-phone-square:before {
+  content: '\f098';
+}
+.icon-briefcase:before {
+  content: '\f0b1';
+}
+.icon-group:before {
+  content: '\f0c0';
+}
+.icon-users:before {
+  content: '\f0c0';
+}
+.icon-magic:before {
+  content: '\f0d0';
 }
 .icon-envelope:before {
   content: '\f0e0';
@@ -50,8 +77,14 @@
 .icon-comment-o:before {
   content: '\f0e5';
 }
+.icon-cloud-download:before {
+  content: '\f0ed';
+}
 .icon-bell:before {
   content: '\f0f3';
+}
+.icon-smile-o:before {
+  content: '\f118';
 }
 .icon-html5:before {
   content: '\f13b';
@@ -61,4 +94,10 @@
 }
 .icon-file-powerpoint-o:before {
   content: '\f1c4';
+}
+.icon-drivers-license-o:before {
+  content: '\f2c3';
+}
+.icon-id-card-o:before {
+  content: '\f2c3';
 }
