--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -792,4 +792,95 @@ button.slick-arrow.slick-prev {
   font-size: 48px;
   color: #ff6a6d;
 }
+
 // end statistics
+
+// start pros
+
+.pros {
+  padding: 120px 0;
+}
+
+.pros__top {
+  text-align: center;
+  &-title {
+    font-size: 36px;
+    color: #000;
+    span {
+      color: $blue;
+    }
+  }
+
+  &-text {
+    max-width: 680px;
+    margin: 0 auto;
+    margin-top: 25px;
+  }
+}
+
+.pros__inner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.pros__item {
+  max-width: 360px;
+  box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+  text-align: center;
+  position: relative;
+  margin-top: 55px;
+  &-num {
+    font-weight: 300;
+    color: rgba(92, 135, 248, 0.2);
+    font-size: 48px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+  }
+
+  .icon-drivers-license-o {
+    font-size: 60px;
+    color: $blue;
+    margin-top: 56px;
+  }
+
+  .icon-magic {
+    font-size: 60px;
+    color: #7f4ec2;
+    margin-top: 56px;
+  }
+  .icon-lock {
+    font-size: 60px;
+    color: #77de51;
+    margin-top: 56px;
+  }
+  .icon-bar-chart {
+    font-size: 60px;
+    color: #feb71d;
+    margin-top: 56px;
+  }
+  .icon-leaf {
+    font-size: 60px;
+    color: #58c9e9;
+    margin-top: 56px;
+  }
+  .icon-phone-square {
+    font-size: 60px;
+    color: #ff6a6d;
+    margin-top: 56px;
+  }
+
+  &-title {
+    font-size: 24px;
+    color: #000;
+    margin-top: 40px;
+  }
+
+  &-text {
+    margin-top: 20px;
+    padding: 0 30px 50px 30px;
+  }
+}
+
+// end pros
