--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -35,6 +35,11 @@ body {
   padding: 0 15px;
 }
 
+.container-fluid {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 .title {
   font-size: 30px;
   color: #000;
