--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -690,18 +690,16 @@ button.slick-arrow.slick-prev {
 .products__btn {
   display: flex;
   justify-content: center;
-  margin-top: 28px;
+  margin-top: 20px;
 }
+
 .products__inner-link {
   max-height: 55px;
   background-color: $blue;
   display: inline-block;
   border-radius: 26px;
   padding: 10px 30px;
-
-  a {
-    color: #fff;
-  }
+  color: #fff;
 }
 // end products
 
@@ -884,3 +882,83 @@ button.slick-arrow.slick-prev {
 }
 
 // end pros
+
+// start sell
+
+.sell {
+  margin-bottom: 120px;
+}
+
+.sell__inner {
+  height: 560px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sell__item {
+  width: 100%;
+  height: 560px;
+  max-width: 960px;
+  position: relative;
+  color: #fff;
+  &-img {
+    height: 100px;
+    margin-top: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &-bgi {
+    background-image: url(../images/sell/sell-left.png);
+    height: 342px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    z-index: 1;
+  }
+
+  &-left {
+    background-color: $blue;
+  }
+
+  &-right {
+    background-color: #7347c1;
+  }
+
+  &-title {
+    font-size: 36px;
+    margin-top: 40px;
+    z-index: 5;
+  }
+
+  &-text {
+    margin: 0 auto;
+    margin-top: 30px;
+    max-width: 650px;
+    z-index: 5;
+  }
+}
+
+.sell__item-button {
+  color: $blue;
+  background-color: #fff;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  border-radius: 27px;
+  padding: 10px 27px;
+  font-weight: 500;
+  z-index: 5;
+  position: absolute;
+  transform: translateX(-50%);
+
+  &-purp {
+    color: #7347c1;
+  }
+}
+
+// end sell
