--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -83,17 +83,32 @@
 .icon-bell:before {
   content: '\f0f3';
 }
+.icon-angle-right:before {
+  content: '\f105';
+}
+.icon-angle-down:before {
+  content: '\f107';
+}
 .icon-smile-o:before {
   content: '\f118';
 }
 .icon-html5:before {
   content: '\f13b';
 }
+.icon-long-arrow-left:before {
+  content: '\f177';
+}
+.icon-long-arrow-right:before {
+  content: '\f178';
+}
 .icon-wordpress:before {
   content: '\f19a';
 }
 .icon-file-powerpoint-o:before {
   content: '\f1c4';
+}
+.icon-circle-thin:before {
+  content: '\f1db';
 }
 .icon-drivers-license-o:before {
   content: '\f2c3';
