--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -16,7 +16,6 @@ body {
 a {
   display: inline-block;
   text-decoration: none;
-  // color: ;
 }
 
 ul,
@@ -24,6 +23,18 @@ li {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 body {
