--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,7 +24,7 @@
 
 .header__seller {
   margin-left: auto;
-  margin-right: 150px;
+  margin-right: 50px;
   padding: 15px 18px;
   background-color: $blue;
   border-radius: 18px;
@@ -112,6 +112,425 @@
   }
 }
 
+.header__box {
+  display: flex;
+  align-items: center;
+}
+
+.header__icons {
+  &.active {
+    display: block;
+  }
+  display: none;
+  width: 34px;
+  height: 34px;
+  color: #7e8fa1;
+  position: relative;
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 14px;
+  }
+
+  span {
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 20px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #fff;
+    left: 20px;
+    bottom: 20px;
+  }
+}
+
+.notification {
+  span {
+    background-color: #ff6a6c;
+  }
+}
+
+.message {
+  span {
+    background-color: #62d03b;
+  }
+}
+
+.cart {
+  span {
+    background-color: $blue;
+  }
+}
+
+.header__btn-login--off,
+.header__btn-register--off {
+  display: none;
+}
+
+.user {
+  margin-left: 20px;
+  &__inner {
+    display: flex;
+    align-items: center;
+    min-height: 100px;
+  }
+
+  &__images {
+    margin-right: 22px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+
+  &__name {
+    font-weight: 700;
+    color: $header;
+    line-height: 22px;
+    font-size: 16px;
+  }
+
+  &__money {
+    font-weight: 500;
+    line-height: 22px;
+    font-size: 15px;
+    color: $blue;
+  }
+}
+
+.user__box,
+.cart__box,
+.message__box {
+  position: relative;
+  &:hover {
+    .user__menu,
+    .cart__menu,
+    .message__menu {
+      height: auto;
+      width: 270px;
+      padding: 20px;
+      border-top: 1px solid $blue;
+    }
+    .user__menu-decor {
+      display: block;
+    }
+  }
+}
+.user__menu {
+  top: 100px;
+  right: 0;
+  box-shadow: 0px 5px 40px 0px rgba(82, 85, 90, 0.2);
+  background-color: #fff;
+  position: absolute;
+  padding: 0 20px;
+  z-index: 1;
+  transition: all 0.3s;
+  height: 0;
+  overflow: hidden;
+
+  a {
+    color: #54667a;
+    font-size: 15px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    padding-left: 41px;
+    position: relative;
+    &:hover {
+      background-color: $blue;
+      color: #fff;
+      border-radius: 3px;
+    }
+    &::before {
+      position: absolute;
+      left: 10px;
+    }
+  }
+}
+
+.user__menu-decor {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-color: $blue;
+  bottom: -6px;
+  right: 28px;
+  transform: rotate(45deg);
+  display: none;
+}
+
+.notification__box,
+.message__box,
+.cart__box {
+  height: 100px;
+  display: flex;
+  align-items: center;
+}
+
+.message__box,
+.cart__box {
+  margin-left: 10px;
+}
+
+.cart__box {
+  margin: 0 10px;
+  position: relative;
+  &:hover {
+    .cart__menu {
+      padding: 26px 0 0 0;
+      width: 400px;
+    }
+  }
+
+  .user__menu-decor {
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    background-color: $blue;
+    bottom: -6px;
+    right: 11px;
+    transform: rotate(45deg);
+    display: none;
+  }
+}
+
+.cart__menu {
+  position: absolute;
+  top: 100px;
+  right: -26px;
+  background-color: #fff;
+  box-shadow: 0px 5px 40px 0px rgba(82, 85, 90, 0.2);
+  z-index: 1;
+  transition: all 0.3s;
+  height: 0;
+  overflow: hidden;
+}
+
+.cart__item {
+  padding: 0 24px;
+  padding-bottom: 26px;
+  border-bottom: 1px solid #e8ebf0;
+  display: flex;
+  align-items: center;
+
+  & + .cart__item {
+    margin-top: 26px;
+  }
+}
+
+.cart__images {
+  margin-right: 15px;
+  width: 80px;
+  height: 70px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.cart__info {
+  display: flex;
+  &-text {
+    max-width: 182px;
+    width: 100%;
+  }
+
+  &-btn {
+    max-width: 75px;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.cart__info-name {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  color: #000;
+  margin-bottom: 10px;
+}
+
+.item__seller-platform.cart__info-theme {
+  margin-left: 0;
+}
+
+.item__box-price.cart__info-price {
+  display: inline-block;
+  max-width: 50px;
+  width: 100%;
+  padding: 2px 8px;
+  color: $blue;
+  background-color: #e6f1fd;
+}
+
+.cart__info-del {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #f0ebf8;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 10px;
+  &::before {
+    color: #818c98;
+    font-size: 16px;
+  }
+}
+
+.cart__title {
+  font-size: 18px;
+  font-weight: 500;
+  color: #000;
+  display: flex;
+  height: 70px;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 24px;
+}
+
+.cart__summ-price {
+  margin-left: 30px;
+}
+
+.cart__btn-menu {
+  display: flex;
+}
+
+.cart__btn {
+  height: 60px;
+  background-color: #7347c1;
+  width: 100%;
+  text-align: center;
+  color: #fefefe;
+  font-size: 15px;
+  line-height: 60px;
+}
+
+.cart__btn-checkout {
+  background-color: $blue;
+}
+
+.message__box {
+  &:hover {
+    .message__menu {
+      width: 370px;
+      padding: 20px 0 10px 0;
+    }
+  }
+
+  .user__menu-decor {
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    background-color: $blue;
+    bottom: -6px;
+    right: 11px;
+    transform: rotate(45deg);
+    display: none;
+  }
+}
+
+.message__menu {
+  position: absolute;
+  top: 100px;
+  right: -17px;
+  background-color: #fff;
+  box-shadow: 0px 5px 40px 0px rgba(82, 85, 90, 0.2);
+  z-index: 1;
+  transition: all 0.3s;
+  height: 0;
+  overflow: hidden;
+  &-title {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 24px 20px 26px;
+    border-bottom: 1px solid #e8ebf0;
+  }
+}
+
+.message__title {
+  font-size: 18px;
+  color: #000;
+}
+
+.message__link {
+  font-size: 15px;
+  color: $blue;
+}
+
+.message__item {
+  display: flex;
+  align-items: center;
+  padding: 10px 24px 10px 26px;
+  border-bottom: 1px solid #e8ebf0;
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 0;
+    margin-right: 14px;
+  }
+
+  &-content {
+    width: 100%;
+  }
+
+  &:last-child {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+}
+
+.message__item-top {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.message__item-bott {
+  width: 100%;
+}
+
+.message__top-name {
+  font-size: 16px;
+  color: $header;
+  font-weight: 500;
+}
+
+.message__top-time {
+  font-size: 15px;
+  font-weight: 400;
+  color: #747a86;
+}
+
+.recent__message {
+  color: $blue;
+}
+
+.message__item-bott {
+  font-size: 15px;
+  color: $text;
+  font-weight: 400;
+}
+
+.new-message {
+  color: $blue;
+  font-size: 14px;
+  margin-left: 15px;
+}
+
+.message-reply {
+  color: $text;
+  font-size: 14px;
+  margin-left: 15px;
+}
 // end header
 
 // start search
@@ -214,8 +633,6 @@
     background-position: center;
     width: 13px;
     height: 8px;
-    &:hover {
-    }
   }
 
   &-text {
@@ -237,11 +654,13 @@
       border-top: 1px solid #dcdcdc;
     }
     button {
+      width: 100%;
       background-color: transparent;
       border: none;
       cursor: pointer;
       color: $text;
       padding: 20px;
+      text-align: left;
     }
   }
 }
@@ -1180,6 +1599,10 @@ button.slick-arrow.slick-prev {
     padding-top: 10px;
     padding-bottom: 8px;
     flex: 0 0 auto;
+    a {
+      color: #999;
+      font-size: 15px;
+    }
   }
 }
 
@@ -1551,6 +1974,7 @@ button.slick-arrow.slick-prev {
   justify-content: flex-end;
   .settings__price,
   .settings__items {
+    width: 200px;
     font-size: 14px;
     color: #747b86;
     border: 1px solid #eceff2;
@@ -1568,6 +1992,50 @@ button.slick-arrow.slick-prev {
 
     span {
       color: $text;
+    }
+
+    &-menu {
+      display: none;
+      position: absolute;
+      top: 42px;
+      left: -1px;
+      background-color: #fff;
+      box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.08);
+      border: 1px solid #dcdcdc;
+      border-top: none;
+      width: 200px;
+      text-align: left;
+      li {
+        height: 42px;
+        display: flex;
+        justify-content: center;
+      }
+
+      li + li {
+        border-top: 1px solid #dcdcdc;
+      }
+
+      button {
+        width: 100%;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        color: $text;
+      }
+    }
+  }
+
+  .settings__price {
+    button {
+      text-align: center;
+      padding-right: 14px;
+    }
+  }
+
+  .settings__items {
+    button {
+      text-align: left;
+      padding: 0 18px;
     }
   }
 
@@ -1659,6 +2127,7 @@ button.slick-arrow.slick-prev {
   position: relative;
   padding-bottom: 15px;
   font-weight: 500;
+  cursor: pointer;
   &::after {
     content: '\f107';
     position: absolute;
@@ -1704,9 +2173,21 @@ button.slick-arrow.slick-prev {
 }
 
 .price-range {
+  padding: 0;
+}
+
+.aside__title-price {
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 20px;
+}
+
+.price-range {
   form {
     padding-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
   button {
     margin: 0 auto;
@@ -1796,8 +2277,9 @@ button.slick-arrow.slick-prev {
 
   .product__item-img {
     min-height: 160px;
-    background-position: center;
     background-repeat: no-repeat;
+    display: block;
+    background-position: center;
     background-size: cover;
   }
 
