--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -297,11 +297,6 @@
   }
 }
 
-.header__btn-login--off,
-.header__btn-register--off {
-  display: none;
-}
-
 .user {
   margin-left: 20px;
   &__inner {
@@ -784,6 +779,10 @@
     color: #62d03a;
   }
 }
+
+.header__btn-login--off {
+  display: none;
+}
 // end header
 
 // start search
@@ -793,6 +792,9 @@
   background-color: #2549cd;
   &.page-search {
     min-height: 280px;
+  }
+  &.page {
+    min-height: 180px;
   }
 }
 
@@ -2720,3 +2722,138 @@ button.slick-arrow.slick-prev {
   }
 }
 // end product-page
+
+// start page
+
+.page__inner {
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .breadcrumbs {
+    &__inner {
+      padding: 0;
+      display: block;
+      justify-content: center;
+    }
+  }
+}
+.page__inner-text {
+  margin-top: 20px;
+  font-size: 30px;
+  color: #fff;
+  font-weight: 500;
+}
+// end page
+
+// start login
+.login {
+  background-color: $bg;
+  padding: 70px 0 120px;
+}
+
+.login__inner {
+  background-color: #fff;
+  margin: 0 auto;
+  max-width: 555px;
+  width: 100%;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  &-title {
+    padding: 40px 10px 20px;
+    text-align: center;
+    border-bottom: 1px solid #e8ebf0;
+  }
+
+  &-form {
+    padding: 20px 50px;
+    button {
+      background-color: $blue;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      border-radius: 25px;
+      max-width: 190px;
+      width: 100%;
+      height: 50px;
+      font-weight: 500;
+      margin-bottom: 30px;
+    }
+  }
+
+  .login__title {
+    font-size: 26px;
+    color: #000;
+  }
+}
+
+.login-line {
+  margin-bottom: 20px;
+  label {
+    display: block;
+    font-size: 16px;
+    color: #000;
+    font-weight: 500;
+    margin-bottom: 5px;
+  }
+
+  input {
+    background-color: #f4f5f8;
+    border: none;
+    height: 50px;
+    width: 100%;
+    padding: 0 20px;
+    &::placeholder {
+      color: #898f96;
+    }
+  }
+}
+
+.login-remember {
+  margin-bottom: 25px;
+  .jq-checkbox {
+    background-color: $blue;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    &__div {
+      display: none;
+    }
+    &.checked {
+      position: relative;
+      &::before {
+        content: '\f00c';
+        font-family: 'icomoon';
+        color: #fff;
+        font-size: 12px;
+        position: absolute;
+        top: -5px;
+        right: 4px;
+      }
+    }
+  }
+
+  .jq-checkbox,
+  .jq-radio {
+    width: 20px;
+    height: 20px;
+    margin: 0 4px 0 0;
+    border: none;
+    background: $blue;
+    box-shadow: none;
+    cursor: pointer;
+  }
+}
+
+.login__inner-box {
+  display: flex;
+  justify-content: space-between;
+  color: #898f96;
+  span {
+    margin: 3px;
+    a {
+      color: $blue;
+    }
+  }
+}
+// end login
