--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2924,4 +2924,41 @@ button.slick-arrow.slick-prev {
     padding: 20px 30px 30px 30px;
   }
 }
+
 // end terms
+
+// start page-404
+.page-404__inner {
+  text-align: center;
+  padding: 80px 0 100px;
+}
+
+.page-404__img {
+  img {
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+  margin-bottom: 40px;
+}
+
+.page-404__text {
+  font-size: 30px;
+  color: #000;
+  margin-bottom: 40px;
+}
+
+.page-404__btn {
+  max-width: 190px;
+  width: 100%;
+  height: 50px;
+  color: #fff;
+  background-color: $blue;
+  border-radius: 25px;
+  font-size: 15px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+// end page-404
