--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1324,6 +1324,7 @@ button.slick-arrow.slick-prev {
   box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
   border-radius: 4px;
   margin-bottom: 30px;
+  background-color: #fff;
   &-img {
     min-height: 230px;
     background-repeat: no-repeat;
@@ -2928,6 +2929,7 @@ button.slick-arrow.slick-prev {
 // end terms
 
 // start page-404
+
 .page-404__inner {
   text-align: center;
   padding: 80px 0 100px;
@@ -2961,4 +2963,449 @@ button.slick-arrow.slick-prev {
   justify-content: center;
   margin: 0 auto;
 }
+
 // end page-404
+
+// start product-one
+.product-one {
+  background-color: $bg;
+  padding: 70px 0 120px;
+}
+
+.product-one__inner {
+  display: flex;
+}
+
+.product-one__content {
+  margin-right: 30px;
+  max-width: 750px;
+  width: 100%;
+  &-item {
+    background-color: #fff;
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+    border-radius: 4px;
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.content__preview-img {
+  max-height: 430px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  img {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+}
+
+.content__preview-btn,
+.content__socials {
+  height: 110px;
+  margin: 0 30px;
+  padding: 30px 0;
+  border-bottom: 1px solid #e8e8e8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-btn {
+  width: 190px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: $blue;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 500;
+  font-size: 15px;
+  margin-right: 30px;
+}
+
+.content-btn__add {
+  background-color: #fff;
+  color: #7347c1;
+  position: relative;
+  padding-left: 26px;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.1);
+  margin-right: 0;
+  font-family: 'Quicksand', sans-serif !important;
+  &::before {
+    content: '\f08a';
+    font-family: 'icomoon';
+    position: absolute;
+    left: 26px;
+  }
+}
+
+.content__btn-share {
+  color: #000;
+  font-weight: 400;
+  margin-right: 30px;
+}
+
+.content__socials {
+  border-bottom: none;
+  .footer__social-link {
+    margin-top: 0;
+    height: 42px;
+  }
+}
+
+.tabs {
+  display: flex;
+  text-align: center;
+  margin-bottom: 70px;
+  .tab {
+    width: 100%;
+    background-color: #fff;
+    font-size: 17px;
+    color: #000;
+    padding: 20px 0;
+    border-bottom: 1px solid #e8e8e8;
+    cursor: pointer;
+    border-top: 3px solid transparent;
+    & + .tab {
+      border-left: 1px solid #e8e8e8;
+    }
+
+    &.active {
+      border-top: 3px solid $blue;
+      border-bottom: 1px solid transparent;
+      color: $blue;
+    }
+
+    .tab__num {
+      font-weight: 500;
+    }
+  }
+}
+
+.tab_content {
+  padding: 0 30px 70px;
+}
+
+.tab-items__content-item {
+  margin-bottom: 50px;
+  .tab-item__title {
+    font-size: 28px;
+    color: #000;
+    margin-bottom: 20px;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.tab-item__list {
+  li {
+    margin-left: 20px;
+    list-style-position: outside;
+    list-style-image: url(../images/icons/icon-mark.png);
+  }
+}
+
+.tab-item__list--num {
+  counter-reset: my-counter;
+  li {
+    list-style: none;
+    margin-left: 0;
+    &::before {
+      content: counter(my-counter) '.';
+      counter-increment: my-counter;
+      color: #000;
+      font-weight: 500;
+      font-size: 16px;
+      margin-right: 5px;
+    }
+  }
+}
+
+.tabs__content-img {
+  .tab-item__title {
+    margin-bottom: 40px;
+  }
+  img {
+    max-width: 690px;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
+.product-one__aside {
+  max-width: 360px;
+  width: 100%;
+}
+
+.product-one__aside-item {
+  background-color: #fff;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  margin-bottom: 30px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.aside__price {
+  background-color: $blue;
+  height: 105px;
+  font-weight: 500;
+  font-size: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  position: relative;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  span {
+    font-size: 18px;
+    position: absolute;
+    top: 33px;
+    left: 123px;
+  }
+}
+
+.aside__tarif {
+  padding: 20px 30px 40px;
+}
+
+.aside__tarif-content {
+  border-bottom: 1px solid #e8e8e8;
+  margin-bottom: 25px;
+  & + .aside__tarif-content {
+    border-bottom: none;
+    margin-bottom: 30px;
+  }
+
+  label {
+    font-weight: 500;
+    font-size: 18px;
+    color: $header;
+  }
+
+  .jq-radio {
+    background: $blue;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    &__div {
+      display: none;
+    }
+    &.checked {
+      position: relative;
+      &::before {
+        content: '\f00c';
+        font-family: 'icomoon';
+        color: #fff;
+        font-size: 12px;
+        position: absolute;
+        top: -5px;
+        right: 4px;
+      }
+    }
+  }
+
+  .jq-checkbox,
+  .jq-radio {
+    width: 20px;
+    height: 20px;
+    margin: 0 12px 0 0;
+    border: none;
+    background: $blue;
+    box-shadow: none;
+    cursor: pointer;
+  }
+}
+
+.aside__tarif-text {
+  margin-left: 38px;
+  padding-bottom: 25px;
+}
+
+.tarif__btn {
+  height: 55px;
+  width: 100%;
+  border-radius: 35px;
+  background-color: $blue;
+  color: #fff;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+
+.tarif__btn-add {
+  font-family: 'Quicksand', sans-serif !important;
+  margin-bottom: 0;
+  background-color: #7347c1;
+  padding-left: 26px;
+  position: relative;
+  &::before {
+    content: '\f07a';
+    font-family: 'icomoon';
+    position: absolute;
+    left: 90px;
+  }
+}
+
+.aside-item__content {
+  padding: 30px;
+}
+
+.aside__content-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e8e8e8;
+  height: 74px;
+}
+
+.content__item-num {
+  font-size: 18px;
+  font-weight: 500;
+  color: $header;
+}
+
+.content__item-name {
+  font-family: 'Quicksand', sans-serif !important;
+  position: relative;
+  padding-left: 25px;
+  &::before {
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+    color: $blue;
+  }
+  &.icon-heart-o {
+    &::before {
+      color: #7f4ec2;
+    }
+  }
+
+  &.icon-comment-o {
+    &::before {
+      color: #58c9e9;
+    }
+  }
+}
+
+.aside__comments {
+  margin-bottom: 30px;
+}
+
+.aside__content-rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .rate-star {
+    margin-right: 10px;
+  }
+}
+
+.aside__item-inner {
+  padding: 30px;
+}
+
+.aside__item-title {
+  font-size: 20px;
+  color: #000;
+  text-align: center;
+  border-bottom: 1px solid #ececec;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.item-list__item {
+  font-size: 15px;
+  font-weight: 500;
+  color: $header;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  span {
+    color: $text;
+    font-weight: 400;
+    max-width: 165px;
+    width: 100%;
+    display: block;
+    a {
+      color: $blue;
+    }
+  }
+}
+
+.aside__item-user {
+  text-align: center;
+  img {
+    width: 100px;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 10px;
+  }
+  .item-user__name {
+    display: block;
+    font-size: 18px;
+    color: #000;
+    font-weight: 500;
+    margin-bottom: 5px;
+  }
+
+  .item-user__date {
+    font-size: 15px;
+    margin-bottom: 25px;
+  }
+
+  .footer__social-link {
+    margin-top: 0;
+    margin-bottom: 25px;
+  }
+
+  .item-user__btn {
+    margin-bottom: 10px;
+    a {
+      font-size: 15px;
+      color: #fff;
+      line-height: 44px;
+    }
+
+    .aside-user__btn {
+      width: 140px;
+      height: 44px;
+      border-radius: 22px;
+      background-color: $blue;
+    }
+
+    .aside-user__btn-message {
+      background-color: #7347c1;
+      margin-left: 15px;
+    }
+  }
+}
+
+// end product-one
+
+// start author-items
+.author__items {
+  background-color: #f6f7fb;
+  padding: 120px 0 122px;
+  .pros__top-title {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+.author__items-inner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+// end author-items
